[package]
name = "lost_cities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
enum-primitive-derive = "0.2"
maplit = "0"
num-traits = "0.2"
bit-set = "0.5"
rpds = "0.13"
rand = "0.8"
rand_xoshiro = "0.6"
